Add the missing documentation